<?xml version="1.0"?>
<package>
  <name>cupnoodle_controller</name>
  <version>0.1.0</version>
  <description>CupNoodle Controller for Convenience Store</description>

  <maintainer email="inamura.laboratory@gmail.com">inamura laboratory</maintainer>

  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
    
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
